# cpptalksindex

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  db.json
include/cppti/: Expected.hpp  HTTPController.hh  Talk.hh  TalksDB.hh  TalksLoader.hh  Utils.hh
src/: HTTPController.cpp  TalksDB.cpp  TalksLoader.cpp  Utils.cpp  main.cpp
tests/: CMakeLists.txt
www/: index.html
www/css/: style.css
www/js/: script.js
